--- a/client/src/common/chart/chart.tpl.html
+++ b/client/src/common/chart/chart.tpl.html
@@ -1,3 +1,3 @@
 <div>
-	<canvas id="trendChart" width="800" height="{{height}}"></canvas>
+	<canvas id="trendChart" width="800" height="400"></canvas>
 </div>
