fix:allow you to change time range

--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -24,6 +24,6 @@
     <script type="text/javascript" src="assets/liftTrend.js"></script>
   </head>
   <body>
-    <div class="container" ng-view></div>
+    <div ng-view></div>
   </body>
 </html>
