--- a/client/src/index.html
+++ b/client/src/index.html
@@ -24,6 +24,6 @@
     <script type="text/javascript" src="<%= file %>"></script><% }); %>
   </head>
   <body>
-    <div class="container" ng-view></div>
+    <div ng-view></div>
   </body>
 </html>
